Fix on mobile

--- a/app/public/dev/stylus/main.styl
+++ b/app/public/dev/stylus/main.styl
@@ -19,8 +19,9 @@ body
 
 .a
   margin 0 auto
-  max-width 1000px
+  max-width 700px
   color $colorOne
+  padding 0 15px
 
 a
   color inherit
@@ -55,3 +56,7 @@ a
     text-decoration none
     &:hover
       text-decoration underline
+
+@media only screen and (max-width: 375px)
+  .s
+    float none
